change authz checking to dictionary based org, project format
